Fix: Lien Instagram

--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
 					<td class="text-right valignBottom">
 						<div class="social padding">
 							<a href="https://www.facebook.com/Hampi-Latika-by-Adeline-1541613636074595/?fref=ts" target="_blank"><img src="./imgs/asset.f.logo.lg.png" alt="Hampilatika on Facebook"></a>
-							<a href="http://www.instagram.com/" target="_blank"><img src="./imgs/instagram.png" alt="Hampilatika on Instagram"></a>
+							<a href="https://www.instagram.com/hampi_latika_by_adeline/" target="_blank"><img src="./imgs/instagram.png" alt="Hampilatika on Instagram"></a>
 						</div>
 					</td>
 				</tr>
