Rename Hampa Latika en 2 mots

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 				<img src="./imgs/manequin.jpg" alt="Hampilatika">
 			</div>
 			<div class="papyrus center">
-				<h4 class="papyrus">Retrouvez les collections Hampilatika prochainement sur notre site internet</h4>
+				<h4 class="papyrus">Retrouvez les collections Hampa Latika prochainement sur notre site internet</h4>
 			</div>
 			<table class="table-full padding">
 				<tr>
